# llmshell

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_READY.md  SECURITY.md  llmshell_prd.md  pyproject.toml  test-results.json  test-results.xml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  release.md  release_tracking.md
.github/workflows/: ci.yml  dependency-update.yml  release.yml  security.yml  test.yml
llmshell/: __init__.py  cli.py  config.py  context.py  core.py  history.py  llm.py  safety.py
scripts/: build.py  demo_models.py  demo_shell.py  release_prepare.py  setup_check.py  test_enhanced_features.py  test_fuzzy_models.py  test_guide.py  test_models.py  test_models_auto.py  test_prompts.py  test_runner.py  test_safety.py  version_bump.py
tests/: conftest.py  test_config.py  test_context.py  test_core.py  test_history.py  test_integration.py
